--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,23 @@
 Package: statthink
-Title: What the Package Does (One Line, Title Case)
+Title: Package for the Book Statistical Reasoning
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    c(person(given = "Brandon",
+           family = "LeBeau",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           email = "lebebr01@gmail.com",
+           comment = c(ORCID = "0000-0002-1265-8761")),
+           person(given = "Andrew",
+           family = "Zieffler",
+           role = c('aut')
+           )
+           )
+Depends: 
+    R (>= 3.5.0)
+Imports:
+    ggplot2 (>= 3.0.0)
 Description: What the package does (one paragraph).
-License: What license it uses
+License: MIT + LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
