--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ importFrom(ggplot2,discrete_scale)
 importFrom(ggplot2,scale_colour_hue)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_grey)
+importFrom(readr,read_csv)
 importFrom(scales,manual_pal)
 importFrom(tibble,deframe)
