--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,11 @@ export(scale_colour_bokeh)
 export(scale_fill_bokeh)
 export(theme_statthinking)
 importFrom(ggplot2,discrete_scale)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
 importFrom(ggplot2,scale_colour_hue)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_grey)
 importFrom(readr,read_csv)
