--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Imports:
 Description: A companion to the text book, Statistional Reasoning through Computation and R.
 URL: http://github.com/lebebr01/statthink
 BugReports: http://github.com/lebebr01/statthink/issues
-License: MIT + LICENSE
+License:  MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
